# viwado-agent

./: .env.example  .gitignore  pyproject.toml  test_settings.py
app/: application.py
app/ai/llm/: base.py  models.py  provider.py
app/api/: router.py
app/api/middleware/: request_id.py
app/api/routers/: health.py
app/api/routes/: health.py
app/core/: lifespan.py
app/core/config/: __init__.py  api.py  app.py  llm.py  loader.py  qdrant.py  redis.py  settings.py
app/core/context/: __init__.py  request_context.py
app/core/exceptions/: base.py  handlers.py
app/core/logging/: __init__.py  configure.py
app/infrastructure/base/: __init__.py  component.py
app/infrastructure/http/: __init__.py  client.py
app/infrastructure/llm/: ollama.py
app/infrastructure/redis/: __init__.py  client.py
app/infrastructure/storage/qdrant/: __init__.py  client.py  collections.py
app/schemas/: error.py  response.py
docker/: compose.yml
scripts/: test_llm.py  test_qdrant.py
