[project]
name = "vewado-agent"
version = "0.1.0"
description = "vewado-agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
